# ChangeLog for games-fps/legends
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/legends/ChangeLog,v 1.30 2014/07/07 20:42:53 mr_bones_ Exp $

  07 Jul 2014; Michael Sterrett <mr_bones_@gentoo.org>
  legends-0.4.1.43-r1.ebuild:
  add QA_FLAGS_IGNORED

*legends-0.4.1.43-r1 (07 Jul 2014)

  07 Jul 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +legends-0.4.1.43-r1.ebuild:
  Bumped EAPi to 5, re-keyworded for amd64, adjusted deps for gx86-multilib,
  added missing deps and dropped indirect deps

  21 Apr 2013; Ulrich Müller <ulm@gentoo.org> legends-0.4.1.43.ebuild:
  Fix LICENSE, see ReadMe_legals.txt, bug 466066.

  05 Feb 2012; Mike Frysinger <vapier@gentoo.org> legends-0.4.1.43.ebuild:
  Move to new unpacker eclass for unpack_makeself.

  22 Feb 2009; Raúl Porcel <armin76@gentoo.org> legends-0.4.1.43.ebuild:
  x86 stable wrt #257854

  08 Dec 2008; Jeremy Olexa <darkside@gentoo.org> legends-0.4.1.42.ebuild,
  legends-0.4.1.43.ebuild:
  revert ~amd64 keyword due to bug 168388

  25 Dec 2007; <solar@gentoo.org> legends-0.4.1.42.ebuild,
  legends-0.4.1.43.ebuild:
  - binary packages that are linked with libc.so.6 need to use sys-libs/glibc
  in RDEPEND

*legends-0.4.1.43 (17 Sep 2007)

  17 Sep 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +legends-0.4.1.43.ebuild:
  version bump

  12 Mar 2007; Marius Mauch <genone@gentoo.org> legends-0.4.1.40.ebuild:
  Replacing einfo with elog

*legends-0.4.1.42 (25 Feb 2007)

  25 Feb 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +legends-0.4.1.42.ebuild:
  version bump - ebuild submitted by Paul Bredbury via bug #168059

  05 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  legends-0.4.1.40.ebuild:
  Removing old virtual/x11 dependency.

  15 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  legends-0.4.1.40.ebuild:
  Change hard-coded /opt to GAMES_PREFIX_OPT.

*legends-0.4.1.40 (27 Jun 2006)

  27 Jun 2006; Michael Sterrett <mr_bones_@gentoo.org>