@@ -1,8 +1,28 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX legends 76 SHA256 7812b2851fb01c8b1a4cc08400e0b41e80dc1682dc666f57faa8b71def9d1216 SHA512 3924b58c389182f3ddc3721cd3bc2fdeb04e34a2ee9c30c3831e3d371f9344c2d882a42a2b7171ae35ad7b719162b5bee8c410a74dbb0384ee7bd63a32771be3 WHIRLPOOL 90a53a0dc704e015ee4f8613b08912a798a619f4ad0f17643c816b9f60c2d46666d8588800fcfde39d76c450117c75a341b9c56ae15862db888356dc373f0fa4
 AUX legends-ded 49 SHA256 404c458d15f16c76804c813b4b82b35e59feebe9e057de43c241e0dbff81a41b SHA512 cf3dd7c815c72af614035e13085ae87e79d4a21332691bdda306566667fd6575cf5d0474c548afa82e89f2f310cb0748d16ed007b79febf912e10865e5b2316e WHIRLPOOL a1b47431931668756337df231f057c9347f7ac32f4f025f6176cfa6d9fc9b4238a575c6cc9c04a3689d96a8691b63c3b5c50dbc90330841c19e7e3cd87df879d
 DIST legends.png 5092 SHA256 f4ac0db949c2f0a373f331a7a7528ef17c674a226c2366a5a443b5b5a44b6ce2 SHA512 7b9f336335dc69e2fbc24286b2076a228739ab4abf1b77d977321d9dccfb453897bdbd51388e3ed54369ba39b7faa92e458700928d8bf5ccc0f3639f8737489a WHIRLPOOL 19fc961afd861b7921847dfa9e7f7159227e37ff8a50c2edae9770d1fe5967652714ab94d549551349d91326ba3da94c766c715b3182926f33a6a25029fbe1b7
 DIST legends_linux-0.4.1.43.run 123964866 SHA256 cd4852b52f6d17afb22e1ee3592af450da712d060d8315faad23cfc7cf570ea4 SHA512 17b1caa3aa6124f2389e2220ced82c41c4523897bde2f8211d219dc9ef8620583c4ae68999b0761155e3d45cb1ad9679cd65ba50c8440dd1848ef3b1a7a590d2 WHIRLPOOL 2d51695cd5fac8422b5a14d7e836f7b3abbf9358e2e7349da1a3750d4a63c961f5b6d54f38331b9e4710f95baf8e9e4f52aef122398e25f979527e52ffef1fff
-EBUILD legends-0.4.1.43-r1.ebuild 2295 SHA256 f97d18e31018150ccc9eb9fa92af81d052769aa71c04c592e688e10f25c02bc1 SHA512 e3ea9fbceaed158d41557997f16197600b65a4b2435e6d2b37b130bd4ade005c906dae9b595a11aa624cbf70c12968525f2025085d139988f602738d72c755d6 WHIRLPOOL 5db023a2d7ac7d5f56e5fffa813e2fbf4cb4dd45b4ddb2d31ed6bf8666b7b5c204d16227eba947c5b756b3639dc99b0c01f84a650337ac9243484bca7f2415c1
+EBUILD legends-0.4.1.43-r1.ebuild 2288 SHA256 d2de418e9acd27be188e01185803ac4ed05abe1189d58653851b26189f877508 SHA512 7d550598dbeb6f9764204f1421f39c07bcad8e020a607329c53e8dca29d1ff14ce61c402dade69b38df40edbb508fb6d0d869fa3660c667bb19039baa670abd8 WHIRLPOOL 488cfca10371aa47c0ed1743dbe8d461aa403289f3db764fd292dada93896f2d2819c3c71dbade2af02564d8d54e4ef1598bdc3e3851b4ccb5124699f32e2b07
 EBUILD legends-0.4.1.43.ebuild 1853 SHA256 6e4b671df3e2daad8f3ea38f348f2cab2e55fb192f12350b668533ef0e750264 SHA512 fd7e85faab76a181c28721398dd66d9db3dd56b63abe66acd06ea473a7d170e6874c9e6fbad062be5a19c8dfdc4517197aaeb133fe4e3856207d6af23f560adf WHIRLPOOL a0c21fcb6b8cbf253c5e3ee699d8a01058df1f056f81eefd26ed4d9891b4ed524e103c1fc23d29e0482f9b166b4d15cd7db2832dc39f41d2e7e5e22e0e4e0998
-MISC ChangeLog 4345 SHA256 6abd2ab244d123a557cbcbc0250217d10bef6fc19afa6764ce8b25078f0cc6d3 SHA512 929bbb8f91800b35c35a4f6848ba642193a2cdf278a9ca8e03aaa059e98a1832a3cbac8f520a1d74396f083c113026f75cc994c5aa32eca7b69c352ca1e2f496 WHIRLPOOL 0943defc5993d47d0ed832ed50a8daad9191ede1b13039e9cb8bcbd3c3643271c73ef0f232f840a430140d4c2b5372de5e1b0344e3ebe218ffe60b82c28555cf
+MISC ChangeLog 4453 SHA256 f3e7378a560daa0e49f1bf30aa04bc8e2b85bf8d8afe88b3515abbd0b55b7c86 SHA512 55385798430d6d45ba22fb08192c62f38511bec745efd6cba63450af28b5c50743e95837aaf27b419f094f68786952e036a4e40c04e68a916b95b0c661e97aac WHIRLPOOL 08fd3cc6bba73f9a4dd4a755a15b783382dadcadcc43c924eb09ecd6915cea59549961ddeec8daf318ae9c9a7db4e967dedf3eba92d3bc56151bc13e7bfadbc8
 MISC metadata.xml 1336 SHA256 c73fab2334bdab5dcfe3c7287511df9129e8668a9d11616336bdd78d4d6acaac SHA512 92fe97a692ac37dcb5f51116b19dd482b8171ccbf1dd14025a4dfa4d87d2495db6f7816b04d2e469f7f1ceb21c1392242ecbe50a98944ff3237cf62e965bd0c4 WHIRLPOOL 443dcb76d95ff98f59fe886f4d86d8d81da5b23b2b84372caa67091a2d5bef6508c3f119821d172a5523847f9f5eab103c0ce5d2a3205aa3e1d62cdc5cab679a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJVM4YCAAoJELp701BxlEWfxB8QAIAzeLOM2APgaLbu/8Xlq0Qa
+oCkYhou4sM7+PeDf7jkKTiw7sv3dxOKNALY+GEQT9XT9xKLPFanRmeRWxA6yP1XU
+uvtRKIElw0Zat6jjovItwJDcMhmlX4EU339/Xay6gL7n6JgL6knx0Zd5RmRCM2kv
+bAOf0QSkQlseQ2scx1bQaWn5HAtwOT8Kzj4XZFXR/2HU2GdWfKDKsQRA75Tu7yL6
+4+8UhVXCaHe4+5C5yO61IaJSa72xEPfD34E5DQxvfZbFX1lW8eQfkiDowAwKK5fW
+eUMicTc0/4sRDYixLRXmLdF7S6NWVTBCbxqnEdwFJVs8ClBaZQ+LxnSStE1GGpRL
+lKEOB3keIwmzKEuljMOkBpyBRSoYblTZrs/1XjIbeiwGvP8iNhBD63geDaqIDdaU
+oN65KX+GsZ03B3/ofLBoeVlQm2dNiyAvUiZjo4cyqjMHbQATZq1HsLOPuysFWe0Z
+LZespLYkt4aypI4jH5UFccE+taDlZiZIiML8tUtuTOwDcWAlBybGQW3sBI0MR+Ju
+K7FIPQByCWCDv15pcpTZlDS+xlgnMfkUvNOazd7SQkEF0YD7QxDFmjIf94eM6X7P
+HdLZcoN3fqXsFdwCwq9uAzbljMqV6f8sa3CjL5MkNICfs6vB9kp3+LQ3aX1h4M8H
+WRpTcUYuw4cld97Gn4np
+=tSEB
+-----END PGP SIGNATURE-----
