@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/legends/legends-0.4.1.43-r1.ebuild,v 1.2 2014/07/07 20:42:53 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/legends/legends-0.4.1.43-r1.ebuild,v 1.3 2015/04/19 10:40:02 ago Exp $
 
 EAPI=5
 inherit eutils unpacker games
@@ -15,7 +15,7 @@ SRC_URI="http://legendsthegame.net/files/${MY_P}.run
 
 LICENSE="Legends LGPL-2.1+"
 SLOT="0"
-KEYWORDS="-* ~amd64 ~x86"
+KEYWORDS="-* amd64 ~x86"
 IUSE="+dedicated"
 RESTRICT="strip"
 
