@@ -3,11 +3,11 @@ DESCRIPTION=Fast-paced first-person-shooter online multiplayer game, similar to 
 EAPI=5
 HOMEPAGE=http://legendsthegame.net/
 IUSE=+dedicated
-KEYWORDS=-* ~amd64 ~x86
+KEYWORDS=-* amd64 ~x86
 LICENSE=Legends LGPL-2.1+
 RDEPEND=sys-libs/glibc amd64? ( sys-libs/glibc[multilib] ) media-fonts/font-adobe-75dpi || ( ( media-libs/libsdl[video,sound,opengl,abi_x86_32(-)] x11-libs/libX11[abi_x86_32(-)] x11-libs/libXext[abi_x86_32(-)] media-libs/libogg[abi_x86_32(-)] media-libs/libvorbis[abi_x86_32(-)] media-libs/openal[abi_x86_32(-)] ) ( >=app-emulation/emul-linux-x86-sdl-2.1[-abi_x86_32(-)] >=app-emulation/emul-linux-x86-soundlibs-2.1[-abi_x86_32(-)] app-emulation/emul-linux-x86-xlibs[-abi_x86_32(-)] app-emulation/emul-linux-x86-opengl[-abi_x86_32(-)] ) ) games-misc/games-envd
 RESTRICT=strip
 SLOT=0
 SRC_URI=http://legendsthegame.net/files/legends_linux-0.4.1.43.run mirror://gentoo/legends.png
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	9fb270e417e0e83d64ca52586c4a79de	games	1ad3205dbf62a2c98249f2f59b0a2d39	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	unpacker	f300a7ca9131b1024a79762e8edd3c52	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=a8522f50b252a976b5fcd99d65bd05f1
+_md5_=7a4b3a693db9d48f9c4ee78f2c9f7102
