@@ -2,10 +2,10 @@ DEFINED_PHASES=configure install
 DESCRIPTION=Provide a faked chroot environment without requiring root privileges
 EAPI=5
 HOMEPAGE=http://fakechroot.alioth.debian.org/
-KEYWORDS=~amd64 ~x86
+KEYWORDS=amd64 ~x86
 LICENSE=LGPL-2.1
 RESTRICT=test
 SLOT=0
 SRC_URI=mirror://debian/pool/main/f/fakechroot/fakechroot_2.17.2.orig.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=6e9fcb9d2ff4f30918ada7b7a8393e2e
+_md5_=fd10fb4e60e7f6d1abe0447662cd182e
