@@ -4,10 +4,10 @@ DESCRIPTION=A filesystem mounter that uses udisks to handle notification and mou
 EAPI=5
 HOMEPAGE=http://sourceforge.net/projects/wmudmount/
 IUSE=gnome-keyring libnotify
-KEYWORDS=~amd64 x86
+KEYWORDS=amd64 x86
 LICENSE=GPL-2
 RDEPEND=sys-fs/udisks:2 >=x11-libs/gtk+-3.8.0:3 gnome-keyring? ( gnome-base/libgnome-keyring ) libnotify? ( >=x11-libs/libnotify-0.7 )
 SLOT=0
 SRC_URI=mirror://sourceforge/wmudmount/wmudmount-2.2.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=b5f2faccfc17d8a60239bcba3737df2f
+_md5_=8ad2c8cc837bb891f68a0c7be10cfff5
