@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmudmount/wmudmount-2.2.ebuild,v 1.2 2015/04/01 18:53:04 nativemad Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmudmount/wmudmount-2.2.ebuild,v 1.3 2015/04/19 10:38:40 ago Exp $
 
 EAPI=5
 inherit eutils gnome2-utils
@@ -11,7 +11,7 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 x86"
+KEYWORDS="amd64 x86"
 IUSE="gnome-keyring libnotify"
 
 RDEPEND="sys-fs/udisks:2
