@@ -1,6 +1,9 @@
 # ChangeLog for games-fps/legends
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/legends/ChangeLog,v 1.30 2014/07/07 20:42:53 mr_bones_ Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-fps/legends/ChangeLog,v 1.31 2015/04/19 10:40:02 ago Exp $
+
+  19 Apr 2015; Agostino Sarubbo <ago@gentoo.org> legends-0.4.1.43-r1.ebuild:
+  Stable for amd64, wrt bug #546072
 
   07 Jul 2014; Michael Sterrett <mr_bones_@gentoo.org>
   legends-0.4.1.43-r1.ebuild:
